--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,19 +29,19 @@ dist.jar=${dist.dir}/ProjetoFinal.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ojdbc7.jar=C:\\Users\\Leandro\\Downloads\\ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.eclipselink.classpath}:\
-    ${file.reference.ojdbc7.jar}:\
+    ${libs.hibernate4-persistence.classpath}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.jandex-1.2.4.Final.classpath}:\
     ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
+    ${libs.hibernate4-persistencemodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -61,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=com.destrosul.view.LoginView
+main.class=com.destrosul.view.PrincipalView
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
