--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -33,8 +34,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-persistence.classpath}:\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.jandex-1.2.4.Final.classpath}:\
+    ${libs.OracleJDBC.classpath}:\
+    ${libs.jandex-1.2.4-final.classpath}:\
     ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
